--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
 <!-- Write your HTML in this file -->
+<h1>
+    Hello, World!
+</h1>
+    <ul> 
+        <li>Slices of Break </li>
+        <li>4 Slices of Cheese</li>
+            <ul>
+                <li>cheddar</li>
+                <li>mozzarella</li>
+                <li>pepper jack</li>
+            </ul>
+        <li>1 tbsp of butter</li>
+    </ul>
